# OpenRoboBrain

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-sim.txt  requirements.txt
configs/: agents.yaml  data.yaml  pipeline.yaml  system.yaml
docs/: ARCHITECTURE.md  BUGS.md  RISKS.md  ROADMAP.md  TODO.md
kaibrain/: __init__.py  cli.py  core.py
kaibrain/agent/: __init__.py  base.py  smart_agent.py
kaibrain/agent/atomic/: __init__.py  base_atomic.py
kaibrain/agent/infrastructure/: __init__.py  agent_client.py  agent_dir.py  session_store.py  workspace.py
kaibrain/agent/orchestrator/: __init__.py  flow_controller.py  orchestrator.py  task_decomposer.py
kaibrain/agent/runtime/: __init__.py  agent_loop.py  agent_runtime.py  context_builder.py  stream_handler.py  tool_executor.py
kaibrain/agent/security/: __init__.py  hook_manager.py  permission.py  tool_policy.py
kaibrain/agent/subagent/: __init__.py  announce.py  concurrency.py  spawn.py  subagent_manager.py
kaibrain/agent/super/: __init__.py  lifecycle.py  monitor.py  registry.py  super_agent.py
kaibrain/behavior/: __init__.py  base.py  executor.py  registry.py
kaibrain/behavior/builtin/: __init__.py  cleaning.py  cooking.py  general.py
kaibrain/capability/: __init__.py  base.py
kaibrain/capability/autonomy/: __init__.py
kaibrain/capability/cognition/: __init__.py
kaibrain/capability/interaction/: __init__.py
kaibrain/capability/motion/: __init__.py
kaibrain/hardware/: __init__.py  abstraction.py
kaibrain/hardware/interfaces/: __init__.py  actuators.py  sensors.py
kaibrain/middleware/: service_discovery.py
kaibrain/middleware/cerebellum_pipeline/: __init__.py  actions.py  ros2_node.py  services.py  topics.py
kaibrain/skills/: __init__.py  base.py  loader.py  registry.py  watcher.py
kaibrain/skills/cognitive/: __init__.py  learning.py  planning.py  reasoning.py
kaibrain/skills/daily_life/: __init__.py  cleaning.py  cooking.py  organizing.py
kaibrain/skills/movement/: __init__.py  climbing.py  locomotion.py  swimming.py
kaibrain/skills/social/: __init__.py  conversation.py  emotion.py
kaibrain/system/: __init__.py
kaibrain/system/brain_pipeline/: __init__.py  brain_cerebellum_bridge.py  bridge.py  message_bus.py  protocol.py  routing.py  state_sync.py  task_pipeline.py  websocket_server.py
kaibrain/system/llm/: __init__.py  base.py  config.py  factory.py
kaibrain/system/services/: __init__.py  config_center.py  logger.py  monitor.py  process_manager.py  resource_scheduler.py  risk_monitor.py  security.py
kaibrain/system/tools/: __init__.py  executor.py  registry.py
orb/: __init__.py  cli.py  core.py
orb/agent/: __init__.py  base.py  smart_agent.py
orb/agent/atomic/: __init__.py  base_atomic.py
orb/agent/infrastructure/: __init__.py  agent_client.py  agent_dir.py  session_compactor.py  session_store.py  workspace.py
orb/agent/orchestrator/: __init__.py  flow_controller.py  orchestrator.py  task_decomposer.py
orb/agent/runtime/: __init__.py  agent_loop.py  agent_runtime.py  context_builder.py  llm_inference.py  stream_handler.py  tool_executor.py
orb/behavior/: __init__.py  base.py  executor.py  registry.py
orb/capability/: __init__.py  base.py
orb/hardware/: __init__.py  abstraction.py
orb/middleware/: __init__.py  service_discovery.py
orb/sim/: __init__.py  mujoco_g1.py
orb/skills/: __init__.py  base.py  loader.py  registry.py  watcher.py
orb/system/: __init__.py
orb/tools/: __init__.py  ros2_monitor.py
scripts/: start_sim.py
tests/: __init__.py  conftest.py
tests/integration/: test_m4_dialogue.py  test_mvp_e2e.py  test_phase2_integration.py  test_phase3_pipeline.py
tests/unit/: test_llm_inference.py  test_memory_ranker.py  test_message_bus.py  test_session_compactor.py  test_shell_tool.py  test_sqlite_storage.py  test_subagent_termination.py  test_task_decomposer.py  test_tool_executor.py  test_tool_policy_enforcement.py
(+109 files in other folders)
