[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaibrain"
version = "0.1.0"
description = "KaiBrain - 具身智能机器人大脑系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KaiBrain Team"}
]
keywords = ["robotics", "embodied-ai", "multi-agent", "ros2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "redis>=4.0",
    "sqlalchemy>=2.0",
    "chromadb>=0.4",
    "networkx>=3.0",
    "numpy>=1.24",
    
    # LLM SDK
    "openai>=1.50",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tiktoken>=0.7",
    
    # MCP
    "mcp>=1.0",
    
    # 工具支持
    "aiofiles>=24.0",
]

[project.optional-dependencies]
ros2 = [
    "rclpy",
]
local = [
    "ollama>=0.3",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "kaibrain[ros2,local,dev]",
]

[project.urls]
Homepage = "https://github.com/kaibrain/kaibrain"
Documentation = "https://kaibrain.readthedocs.io"

[project.scripts]
kaibrain = "kaibrain.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaibrain*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
